--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>First git repo with programming hero</title>
 </head>
 <body>
+
+    <h1>This is my first code with programming hero</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero fuga praesentium eius aspernatur natus cumque rem, sequi in nobis deserunt repellendus architecto molestias iste porro dolorem. Quisquam, nostrum autem? Enim?</p>
+
+    <h2>How are you doing now?</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, minima iste unde vitae a hic assumenda quaerat quo voluptatum est rerum error in veritatis suscipit obcaecati totam, officiis quis non!</p>
     
 </body>
 </html>
