Adding style by using flex

--- a/index.html
+++ b/index.html
@@ -4,15 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>First git repo with programming hero</title>
 </head>
 <body>
 
-    <h1>This is my first code with programming hero</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero fuga praesentium eius aspernatur natus cumque rem, sequi in nobis deserunt repellendus architecto molestias iste porro dolorem. Quisquam, nostrum autem? Enim?</p>
+    <section class="container">
+        <h1>Flex Box Practice</h1>
+        <div class="row">
+            <div class="col-2 card">
+                <h2>This is my first code with programming hero</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero fuga praesentium eius aspernatur natus cumque rem, sequi in nobis deserunt repellendus architecto molestias iste porro dolorem. Quisquam, nostrum autem? Enim?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero fuga praesentium eius aspernatur natus cumque rem, sequi in nobis deserunt repellendus architecto molestias iste porro dolorem. Quisquam, nostrum autem? Enim?</p>
+            </div>
 
-    <h2>How are you doing now?</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, minima iste unde vitae a hic assumenda quaerat quo voluptatum est rerum error in veritatis suscipit obcaecati totam, officiis quis non!</p>
+            <div class="col-2 card syan">
+                <h2>How are you doing now?</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, minima iste unde vitae a hic assumenda quaerat quo voluptatum est rerum error in veritatis suscipit obcaecati totam, officiis quis non!<p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, minima iste unde vitae a hic assumenda quaerat quo voluptatum est rerum error in veritatis suscipit obcaecati totam, officiis quis non!<p>
+            </div>
+        
+        </div>
+
+
+    </section>
     
 </body>
 </html>
