--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 
     <section class="container">
-        <h1>Flex Box Practice</h1>
+        <img src="img/download.jfif" alt="devloper-image">
+        <h2 class="heading">Flex Box Practice</h2>
         <div class="row">
             <div class="col-2 card">
                 <h2>This is my first code with programming hero</h2>
