--- a/index.html
+++ b/index.html
@@ -11,12 +11,26 @@
 
     <section class="container">
         <img src="img/download.jfif" alt="devloper-image">
-        <h2 class="heading">Flex Box Practice</h2>
+        <div class="heading">
+            
+            <h2>Some best practice to improve your programming skills</h2>
+
+        </div>
         <div class="row">
             <div class="col-2 card">
-                <h2>This is my first code with programming hero</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero fuga praesentium eius aspernatur natus cumque rem, sequi in nobis deserunt repellendus architecto molestias iste porro dolorem. Quisquam, nostrum autem? Enim?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero fuga praesentium eius aspernatur natus cumque rem, sequi in nobis deserunt repellendus architecto molestias iste porro dolorem. Quisquam, nostrum autem? Enim?</p>
+                <img src="img/programming-skills-1946874-1649524.png" alt="programming skill image">
+                <h2>How to Improve Your Skills</h2>
+                <p>Programming is one of the most versatile skills on the market in this age. From being able to create company websites to knowing how to easily fix a redirecting error, these skills can be invaluable to an employer and yourself in many ways. <br><strong><em>I describe some step to do best practice as a programmer</em></strong> </p>
+               <ol>
+                   <li>Analyze the problem clearly.</li>
+                   <li>Think twice about how to solve that problem.</li>
+                   <li>Gather complete requirements.</li>
+                   <li>Write a thorough implementation plan (or model).</li>
+                   <li>Comment your code liberally.</li>
+                   <li>Organize your code.</li>
+                   <li>Practice, practice, practice.</li>
+                   
+               </ol>
             </div>
 
             <div class="col-2 card syan">
